--- a/project1/css/stylesheet.css
+++ b/project1/css/stylesheet.css
@@ -1,9 +1,9 @@
 body, html {
     display: block;
     height: 100%;
-    width: 100%;
+    width: auto;
 background-color: black;
-	margin: 0  ;
+	margin: auto ;
     align-items: center;
 	
 }
