--- a/project3/css/stylesheet.css
+++ b/project3/css/stylesheet.css
@@ -1,4 +1,82 @@
-html{
+html, body{
 
     margin: auto;
+    display: block;
+    background-color: #111;
+}
+
+.wrapper{
+    margin: 1rem;
+}
+
+header{
+padding: 1em;
+
+box-shadow: 0px 5px 5px 2px #b189f1;
+
+
+background-color: rgb(255, 255, 255);
+}
+
+
+
+footer{
+
+    text-align: center;
+    padding: 0.2em;
+    background-color: #111;
+    font-family: Merengue Script;
+}
+
+p{
+    color: #f3f3f3;
+}
+
+h2{
+
+    color: #fafafa;
+}
+
+h3{
+color: #fff;
+    font-family: bebas neue pro;
+}
+
+section{
+    padding: 1em;
+}
+
+#cta{
+
+text-align: center;
+ padding: 2rem;
+ 
+    
+}
+
+button{
+    
+    box-shadow: 0px 2px 5px 2px #b189f1;
+
+}
+
+.flex-columns{
+
+    display: flex;
+justify-content: space-evenly;
+    flex-direction: row;
+
+    padding: 1rem;
+}
+
+.flex-columns div {
+    background-color: #f3f3f3;
+    border-style: solid;
+    border-radius: 0.2rem;
+    border-color: #fafafa;
+    padding: 1rem;
+    border-width: 1px;
+    box-shadow: 0px 2px 5px 2px #b189f1;
+    
+
 }
