--- a/project3/css/stylesheet.css
+++ b/project3/css/stylesheet.css
@@ -51,19 +51,28 @@ nav a:hover {
     color: #b189f1;
   }
 
+  h1{
+    font-size: 50px;
+    color: #b189f1;
+    text-align: center;
+  }
+
 
 p{
     color: #f3f3f3;
+    font-size: 20px;
 }
 
 h2{
 
     color: #fafafa;
+    font-size: 35px;
 }
 
 h3{
 color: #fff;
     font-family: bebas neue pro;
+    font-size: 27px;
 }
 
 section{
@@ -92,6 +101,9 @@ li{
 button{
     
     box-shadow: 0px 2px 5px 2px #b189f1;
+    background-image: linear-gradient(#111, #b189f1);
+    color: #f3f3f3;
+
 
 }
 
