--- a/project4/css/stylesheet.css
+++ b/project4/css/stylesheet.css
@@ -1,74 +1,149 @@
+
+
+
+
 html{
 
 
+margin: 0;
     
 }
 
 
 body{
 
-    background-color: #fff;
+  
+    margin: auto;
+    
+    background-color: #F9f9f9;
 }
 
 
 .wrapper{
 
     display: block;
-    margin: 1em;
+    margin: 0 ;
     justify-content: space-evenly;
+    
+    padding: 1em;
     
 }
 
 .grid-container{
 
     display: grid;
-    grid-template-columns: auto auto;
-   gap:10px;
-    padding: 1rem;
+    grid-template-columns: auto auto ;
+   gap:20px;
+    padding: 1.5rem;
 
-    height: 100vh;
+    height: auto;
+    margin: 0 auto;
    
 }
 
 .grid-item{
 
 
- 
     display: flex;
     flex-direction: row;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #F9f9f9;
     
     padding: 1rem;
     
     
-    justify-content: space-around;
-    box-shadow: 1px 3px 5px  #111;
+    justify-content: space-between;
+    box-shadow: 1px 3px 5px  #22181c;
+    border-radius: 2%;
    
   
   
 }
 
+h2{
+    text-align: center;
+    color: #f45b69;
+    font-family:Merengue Script ;
+}
+
 h4{
 
     font-size: 20px;
+    color: #22181c;
+}
+
+.hero{
+
+   object-fit: contain;
+    justify-content: center;
+    
+}
+
+.item-picture{
+
+    width: 70%;
+    height: 100%;
 }
 
 .item-desc{
 
+    margin: 0 auto;
     padding: 0.5em;
+    background-color: #F9f9f9;
+    width: 50%;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    
+    line-height: 50vh;
+  
+    
 
+}
+
+img{
+   
+    width: 100%;
+    
+}
+
+span{
+   display: inline-block;
+   vertical-align: middle;
+   line-height: 20px;
+   overflow-wrap: break-word;
+}
+
+.item-desc p { 
+    text-align: center;
+    vertical-align: middle;
+}
+
+.item-inline{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0.2em;
+    color: #f45b69;
+    
+}
+
+.item-inline div{
+    padding: 0.2rem;
 }
 
 p{
 
-    max-width: 20ch;
+    
     font-size: 12px;
+    color: #22181c;
 }
 
 .grid-item img{
 
    width: 100%;
    height: 100%;
+   
 
     
 }
@@ -78,7 +153,7 @@ nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: rgb(201, 41, 41);
+    background-color: #f45b69;
     padding: 2rem;
     text-decoration: none;
    text-decoration-style: none;
@@ -88,24 +163,25 @@ nav ul{
 
 .onred{
 
-    color: #fff;
+    color: #f6e8ea;
 }
 
 header{
 
-    box-shadow: 1px 5px 5px #111;
+    box-shadow: 1px 5px 5px #22181c;
     
 }
 
 header h1{
     text-align: center;
     font-family: Merengue Script;
+    font-size: 70px;
 }
 
 footer{
 
     text-align: center;
     padding: 0.2em;
-    background-color: rgb(201, 41, 41);
+    background-color: #f45b69;
     font-family: Merengue Script;
 }
