--- a/project4/css/stylesheet.css
+++ b/project4/css/stylesheet.css
@@ -15,7 +15,7 @@ body{
   
     margin: auto;
     
-    background-color: #F9f9f9;
+    background-color: #fbfbfd;
 }
 
 
@@ -61,14 +61,14 @@ body{
 
 h2{
     text-align: center;
-    color: #f45b69;
+    color: #06c;
     font-family:Merengue Script ;
 }
 
 h4{
 
     font-size: 20px;
-    color: #22181c;
+    color: #06c;
 }
 
 .hero{
@@ -148,6 +148,91 @@ p{
     
 }
 
+
+
+
+.store-grid-container{
+
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-rows: auto 1fr  auto ;
+    gap: 10px;
+   
+    padding: 10px;
+    height: auto;
+
+
+}
+
+.store-grid-container > div {
+    background-color: #fbfbfd;
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+    
+  }
+
+  .item1 {
+    grid-area: 1 /  1 / 1 / 5;
+  }
+
+  .item2{
+
+    grid-area: 2/ 1 /   2/    2 ;
+    z-index: 2;
+  }
+
+  .item3{
+
+    grid-area:  2 /  2 / 2 /  3 ;
+  }
+
+  .item4{
+
+    grid-area: 2 / 3 /   2 / 4;
+  }
+
+  .item5{
+
+    grid-area: 2 / 4 / 2 / 5;
+    background-image: url("../images/customcake.jpg");
+    background-repeat: no-repeat; 
+    background-size: cover;
+  }
+
+  .item6{
+
+    grid-area: 4/ 1 / 4 / 5;
+  }
+
+  a{
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+
+  }
+
+  a:link{
+      text-decoration: underline;
+      color: white;
+  }
+
+  a:visited{
+      color: #f6e8ea;
+  }
+
+  .hero-text{
+
+    text-align: center;
+    position: absolute;
+    top: 120%;
+    left: 87%;
+    transform: translate(-50%, -50%);
+    
+    text-decoration: none;
+    padding: 0.5em 0;
+  }
+  
+
 nav ul{
 
     display: flex;
@@ -183,5 +268,5 @@ footer{
     text-align: center;
     padding: 0.2em;
     background-color: #f45b69;
-    font-family: Merengue Script;
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
