--- a/project4/css/stylesheet.css
+++ b/project4/css/stylesheet.css
@@ -12,8 +12,8 @@ margin: 0;
 
 body{
 
-  
-    margin: auto;
+  max-width: 100vw;
+    margin: 0;
     
     background-color: #fbfbfd;
 }
@@ -21,11 +21,10 @@ body{
 
 .wrapper{
 
-    display: block;
-    margin: 0 ;
-    justify-content: space-evenly;
     
-    padding: 1em;
+    max-width: 90vw;
+   
+    margin: 0 auto;
     
 }
 
@@ -103,6 +102,7 @@ h4{
 img{
    
     width: 100%;
+    padding: 1rem;
     
 }
 
@@ -231,6 +231,13 @@ p{
     text-decoration: none;
     padding: 0.5em 0;
   }
+
+  .custom-nav-text{
+
+    font-family: 'Lobster Two', cursive;
+    font-size:2rem;
+    text-transform: lowercase;
+  }
   
 
 nav ul{
@@ -257,9 +264,9 @@ header{
     
 }
 
-header h1{
+.cursive{
     text-align: center;
-    font-family: Merengue Script;
+    font-family: 'Kaushan Script', cursive;
     font-size: 70px;
 }
 
