--- a/project4/css/stylesheet.css
+++ b/project4/css/stylesheet.css
@@ -10,6 +10,19 @@ margin: 0;
 }
 
 
+.bg-pink{
+
+
+  background-color: #f45b69;
+
+}
+
+
+.text-pink{
+
+  color: #f45b69;
+}
+
 body{
 
   max-width: 100vw;
@@ -22,7 +35,7 @@ body{
 .wrapper{
 
     
-    max-width: 90vw;
+    max-width: 87vw;
    
     margin: 0 auto;
     
